tracworkflowadmin: fixed gap between fieldsets and actions table (refs #10305)
git-svn-id: https://trac-hacks.org/svn@11973 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/tracworkflowadminplugin/0.12/tracworkflowadmin/htdocs/css/tracworkflowadmin.css
+++ b/tracworkflowadminplugin/0.12/tracworkflowadmin/htdocs/css/tracworkflowadmin.css
@@ -3,9 +3,7 @@ a {
 }
 
 #table-wrapper {
- clear: both;
  overflow: auto;
- display: none;
 }
 
 #table-wrapper input {
@@ -239,7 +237,9 @@ table#elements tbody tr:hover button {
 }
 
 #dummy-form fieldset {
- float: left;
+ display: inline-block;
+ *display: inline;
+ *zoom: 1;
  height: 4em;
  padding: 0 0.5em 0.5em 0.5em;
  margin-right: 1em;
